2009-06-25  Martin Jambor  <mjambor@suse.cz>

PR tree-optimization/40493
	* tree-sra.c (sra_modify_expr): Correct BIT_FIELD_REF argument numbers.
	(enum unscalarized_data_handling): New type.
	(handle_unscalarized_data_in_subtree): Return what has been done.
	(load_assign_lhs_subreplacements): Handle left flushes differently.
	(sra_modify_assign): Use unscalarized_data_handling, simplified
	condition determining whether to remove the statement.

	* testsuite/gcc.c-torture/execute/pr40493.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@148941 138bc75d-0d04-0410-961f-82ee72b054a4